--- a/style.css
+++ b/style.css
@@ -81,18 +81,21 @@ body {
 }
 
 .profile-photo {
-    width: 200px;
-    height: 200px;
+    width: 190px;
+    height: 190px;
     margin: 0 auto 2rem;
     overflow: hidden;
     border-radius: 50%;
     border: 3px solid var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .profile-photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 220px;
+    height: 220px;
+    object-fit: contain;
 }
 
 .home h1 {
